# fluorite-recipes

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md
apps/base/: package-lock.json  package.json
apps/expo/base/: app.json  package-lock.json  package.json  pnpm-lock.yaml
docs/: frameworks.md  libs.md
docs/frameworks/: expo.md  nextjs.md  react.md
docs/frameworks/expo/: docs.md  llms-eas.txt  llms-full.txt  llms-sdk.txt
docs/frameworks/nextjs/: blog.md  docs.md  learn.md
docs/frameworks/react/: docs.md
docs/libs/: drizzle.md  jotai.md  kibo-ui.md  prisma.md  shadcn.md  tailwindcss.md  turborepo.md  valtio.md  zustand.md
docs/libs/jotai/: docs.md
docs/libs/prisma/: README.md  TRANSLATION_STATUS.md
docs/libs/shadcn/: llms.txt.md
docs/libs/turborepo/: docs.md
docs/libs/valtio/: docs.md
docs/libs/zustand/: docs.md
docs/templates/ai/: customer-reviews-ai-summary-nextjs-vercel.md  empathic-voice-interface-starter.md  gemini-ai-chatbot.md  headshot-ai.md  morphic-ai-answer-engine-generative-ui.md  nextjs-ai-chatbot.md  pinecone-vercel-ai.md  qrGPT.md
docs/templates/authentication/: next-js-saas-starter.md  supabase.md
docs/templates/blog/: blog-nextjs-sanity.md  blog-starter-kit.md  isr-blog-nextjs-wordpress.md  nextjs-contentlayer.md  sanity-visual-editing-demo.md
docs/templates/documentation/: documentation-starter-kit.md
tools/indexer/: README.md  batch.ts  index.ts  package.json  tsconfig.json
tools/indexer/examples/rust-pack-check/: Cargo.toml  README.md
tools/indexer/examples/rust-pack-check/src/: main.rs
userdata/: .keep
(+2585 files in other folders)
